[workspace]
members = [
    "benzina",
    "benzina-derive",
]
resolver = "2"

[workspace.package]
version = "0.4.4"
description = "Various helper types and macros for `diesel`"
categories = ["database"]
keywords = ["diesel", "postgresql", "enum", "macro", "json"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/M4SS-Code/benzina"
rust-version = "1.86"

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
await_holding_refcell_ref = "deny"
map_unwrap_or = "warn"
needless_lifetimes = "warn"
needless_raw_string_hashes = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
clone_on_ref_ptr = "warn"
