[package]
name = "benzina-derive"
version.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
features = ["postgres", "mysql"]

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version = "2.0.99", default-features = false, features = ["derive", "parsing", "printing", "proc-macro", "clone-impls"] }
heck = "0.5.0"

[dev-dependencies]
diesel = { version = "2", default-features = false, features = ["postgres", "mysql_backend"] }

[features]
postgres = []
mysql = []

[lints]
workspace = true
