[package]
name = "benzina"
version.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["postgres", "mysql", "serde", "typed-uuid", "example-generated"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
diesel = { version = "2.2", default-features = false, optional = true }
serde = { version = "1", optional = true }
utoipa = { version = "5", optional = true }
benzina-derive = { path = "../benzina-derive", version = "=0.3.3", optional = true }
uuid = { version = ">=0.7.0, <2.0.0", default-features = false, optional = true }

[dev-dependencies]
serde_test =  "1"

[features]
default = ["derive"]
derive = ["dep:benzina-derive"]

postgres = ["benzina-derive?/postgres", "diesel", "diesel/postgres_backend"]
typed-uuid = ["postgres", "diesel/uuid", "dep:uuid"]
mysql = ["benzina-derive?/mysql"]

serde = ["dep:serde", "uuid?/serde"]
utoipa = ["dep:utoipa"]

example-generated = ["typed-uuid"]

[lints]
workspace = true
